# SWDataMonitoreo

./: .gitignore  CMakeLists.txt  Desc_pdialog.ui  README.md  bussineslayer.cpp  bussineslayer.h  dbconection.cpp  dbconection.h  desc_pdialog.cpp  desc_pdialog.h  editdatadialog.cpp  editdatadialog.h  editdatadialog.ui  fotodialog.cpp  fotodialog.h  fotodialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  monitoreo_xertek.pro  nuevaestmonitoreodialog.cpp  nuevaestmonitoreodialog.h  nuevaestmonitoreodialog.ui  nuevodialog.cpp  nuevodialog.h  nuevodialog.ui  qeasysettings.cpp  qeasysettings.hpp  rsc.qrc  swcustomtxt.cpp  swcustomtxt.h
data_base_diagram/: databasediagram.mwb  databasediagram.mwb.bak  monitoreo_db.sql
